--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "regenerator-runtime": "^0.13.9",
+    "prop-types": "^15.8.1",
     "@near-wallet-selector/core": "^7.0.0",
     "@near-wallet-selector/ledger": "^7.0.0",
     "@near-wallet-selector/math-wallet": "^7.0.0",
