feat: update and reoirganize repo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "start": "./start.sh",
-       "start:headless": "env-cmd -f '../contract/neardev/dev-account.env' parcel index.html",
+    "start": "parcel index.html --open",
+    "start:headless": "env-cmd -f '../contract/neardev/dev-account.env' parcel index.html",
     "build": "parcel build index.html --public-url ./",
     "test:e2e": "npm run start:headless & npm run cypress:run",
-      "cypress:run": "cd .cypress && cypress run",
-      "cypress:open": "cypress open --browser chromium"
+    "cypress:run": "cd .cypress && cypress run",
+    "cypress:open": "cypress open --browser chromium"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
