--- a/contract-rs/Cargo.toml
+++ b/contract-rs/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = "4.0.0"
+near-sdk = "4.1.1"
 uint = { version = "0.9.3", default-features = false }
+
+[patch.crates-io]
+parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }
 
 [profile.release]
 codegen-units = 1
@@ -21,3 +24,4 @@ overflow-checks = true
 
 [workspace]
 members = []
+
