--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel index.html",
     "start:headless": "env-cmd -f '../contract/neardev/dev-account.env' parcel index.html",
     "build": "parcel build index.html --public-url ./",
     "test:e2e": "npm run start:headless & npm run cypress:run",
